client/src/components/Story/Story.scss
@import "../../utilities/scss-variables/variables.scss";

.xp-story {
  margin: 40px 0px;

  &:first-child {
    margin-top: 10px;
  }
  .xp-story-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    flex-wrap: nowrap;
    transition: all 0.3s ease;
    cursor: pointer;
  }

  .xp-story-body {
    padding: 0px;
    width: 100%;
    flex: 2;
    overflow: hidden;

    .xp-story-body_title {
      h6 {
        font-size: 12px;
        color: $xp-black;
        text-transform: capitalize;
        font-weight: 400;
        margin: 0px 0px 3px 0px;

        span {
          text-transform: none;
          font-weight: 600;
        }
      }

      h1 {
        font-size: 22px;
        font-weight: 600;
        color: $xp-black;
        margin-bottom: 3px;
      }
    }
    .xp-story-body_details {
      @extend .xp-center;
      justify-content: flex-start;
      margin: 7px 0px;
      flex-wrap: wrap;

      p {
        &:nth-child(1) {
          margin-left: 0px;
        }
        text-transform: none;
        color: $xp-accent;
        font-weight: 500;
        margin: auto 0px;
      }

      .spacer {
        width: 5px;
        height: 5px;
        border-radius: 50%;
        background-color: $xp-accent;
        margin: auto 10px;
      }
    }

    .xp-story-body_content {
      margin: 0px;
      padding: 0px;
      white-space: nowrap;
      text-overflow: ellipsis;
      overflow: hidden;
      width: 100%;
      h1,
      h2,
      h3,
      h4,
      h5,
      h6,
      p,
      a,
      span,
      li,
      ul,
      ol,
      strong {
        font-size: 14px;
        color: $xp-accent;
        font-weight: 400;
        margin: 0px;
        padding: 0px;
        display: inline;
        height: 0px;
      }
    }
  }
  .xp-story-img {
    margin-left: 7px;
    flex: 1;
    @extend .xp-center;
    align-items: stretch;

    img {
      width: 200px;
      height: 133px;
      object-fit: cover;
      background-color: $xp-pri;
    }
  }
}

@media (max-width: 991px) {
  .xp-story {
    .xp-story-body {
      .xp-story-body_details {
        p {
          font-size: 12px;
        }
        .spacer{
          margin: auto 7px;
        }
      }
    }
    .xp-story-img {
      img {
        width: 172px;
        height: 129px;
      }
    }
  }
}

@media (max-width: 768px) {
  .xp-story {
    .xp-story-body {
      flex: 2;
      .xp-story-body_details {
        p {
          font-size: 14px;
        }
      }
      .xp-story-body_content {
        h1,
        h2,
        h3,
        h4,
        h5,
        h6,
        p,
        a,
        span,
        li,
        ul,
        ol,
        strong {
          font-size: 12px;
        }
      }
    }
    .xp-story-img {
      flex: 1;
      img {
        width: 150px;
        height: 140px;
      }
    }
  }
}
@media (max-width: 576px) {
  .xp-story {
    margin: 30px 0px;
    .xp-story-body {
      flex: 3;
      .xp-story-body_details {
        margin: 3px 0px;
        p {
          font-size: 12px;
        }
        .spacer {
          margin: auto 5px;
          width: 3px;
          height: 3px;
        }
      }
      .xp-story-body_title {
        h1 {
          font-size: 16px;
        }
      }
      .xp-story-body_content {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        width: 100%;
      }
    }
    .xp-story-img {
      img {
        width: 100px;
        height: 100px;
      }
    }
  }
}
@media (max-width: 480px) {
  .xp-story {
    margin: 30px 0px;
    .xp-story-body {
      flex: 3;
      .xp-story-body_details {
        margin: 3px 0px;
        p {
          font-size: 12px;
        }
        .spacer {
          margin: auto 5px;
          width: 3px;
          height: 3px;
        }
      }
      .xp-story-body_title {
        h1 {
          font-size: 16px;
        }
      }
      .xp-story-body_content {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        width: 100%;
      }
    }
    .xp-story-img {
      img {
        width: 100px;
        height: 100px;
      }
    }
  }
}

